--- a/home-content.html
+++ b/home-content.html
@@ -104,6 +104,24 @@
         <h2>Changelog</h2>
         <p>The World's Hardest Game Website is an ongoing project that will receive updates over time. If you have any feedback or suggestions then please contact Danicker on discord.</p>
 
+        <h4>Version 3.2 – 27th September 2024</h4>
+        <ul>
+            <li>Added GLITCH LIST to the WIKI page. This is a very comprehensive list of glitches, exploits and oversights in the Flash versions of The World's Hardest Game. Thanks to Fraims for compiling this list. This is currently the only page on the wiki but we hope to expand it in the future.</li>
+            <li>Some minor improvements to CUSTOM LEADERBOARDS:
+                <ul>
+                    <li>Leaderboard categories will now always be up-to-date with the current categories available on speedrun.com. In particular, TWHG1 HTML5 individual levels, TWHG2 Glitched and TWHG3 Paint% are now accessible in the leaderboards system.</li>
+                    <li>Player names will now be displayed in the most up-to-date user profile information.</li>
+                    <li>Banned players will now appear in dark grey.</li>
+                </ul>
+            </li>
+            <li>Some minor improvements to the ROUTE LIST:
+                <ul>
+                    <li>Added URL parameters for the game and level, so you can share links like <a target="_blank" href="http://twhg.info/routes?game=2&level=15">http://twhg.info/routes?game=2&level=15</a>.</li>
+                    <li>Added an info button to the top right corner that provides some additional information about the route list.</li>
+                </ul>
+            </li>
+        </ul>
+
         <h4>Version 3.1 – 23rd February 2024</h4>
         <ul>
             <li>Made some minor changes to GETTING STARTED to hopefully make it more accurate and more helpful.</li>
