--- a/sidenav.html
+++ b/sidenav.html
@@ -7,22 +7,7 @@
     <body>
         <a href="home.html" class="title single">Home</a>
         <a href="getting-started.html" class="title single">Getting Started</a>
-        <div class="title category">Wikis</div>
-        <div class="dropdown">
-            <a class="nolink">TWHG1</a>
-            <a class="nolink">TWHG2</a>
-            <a class="nolink">TWHG3</a>
-            <a class="nolink">TWHG4</a>
-            <!--
-            <a class="nolink">TWHG1u</a>
-            <a class="nolink">TWHG2u</a>
-            <a class="nolink">TWHG3u</a>
-            <a class="nolink">TWHG4u</a>
-            <a class="nolink">TWHG1m</a>
-            <a class="nolink">TWHG2m</a>
-            <a class="nolink">TWHG3m</a>
-            -->
-        </div>
+        <a href="wiki.html" class="title single">Wiki</a>
         <a href="leaderboards.html" class="title single">Custom Leaderboards</a>
         <a href="routes.html" class="title single">Route List</a>
         <a href="mods.html" class="title single">Mods</a>
