tiny wiki update
just trying things out, seeing what happens

--- a/wiki-content.html
+++ b/wiki-content.html
@@ -59,7 +59,7 @@
                 <td id="Cutscene_Death_Softlock">Cutscene Death Softlock</td>
                 <td>4</td>
                 <td>
-                    Pausing during a cutscene allows the player to die during a cutscene, which can lead to softlocks. Can also happen by respawning onto a cutscene in for example 4-D3. Fixed by simply loading the game. More information at cutscene death.
+                    Pausing during a cutscene allows the player to die during a cutscene, which can lead to softlocks. Can also happen by respawning onto a cutscene in for example 4-D3. Fixed by simply loading the game. More information at <a href="#Cutscene_Death">cutscene death</a>.
                 </td>
             </tr>
             <tr>
